--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -2,3 +2,5 @@ public-f net.minecraft.world.gen.feature.structure.Structure field_236384_t_ #LA
 public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236191_b_ #DEFAULT_STRUCTURE_CONFIGS
 public-f net.minecraft.world.gen.FlatGenerationSettings field_202247_j #STRUCTURES
 public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236193_d_ #structures
+public-f net.minecraft.entity.ai.attributes.AttributeModifierMap.MutableAttribute
+public-f net.minecraft.entity.ai.attributes.Attribute p_233817_1_
