--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -4,3 +4,4 @@ public-f net.minecraft.world.gen.FlatGenerationSettings field_202247_j #STRUCTUR
 public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236193_d_ #structures
 public-f net.minecraft.entity.ai.attributes.AttributeModifierMap.MutableAttribute
 public-f net.minecraft.entity.ai.attributes.Attribute p_233817_1_
+public-f net.minecraft.item.AxeItem field_203176_a # BLOCK_STRIPPING_MAP
